--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -2,6 +2,13 @@
 /* .sidebar {
   transition: width 0.3s ease-in-out;
 } */
+ 
+.sidebar {
+  width: 50vw;
+  background-color: black;
+  border-right: 1px solid #fff;
+  color: #fff;
+}
 
 /* When sidebar is hidden */
 .sidebar-hidden {
